refactor: simplify to CLI k=v parsing with .agents/ environment config